background to fixed on mobile and desktop

--- a/style.scss
+++ b/style.scss
@@ -113,14 +113,14 @@ img {
 
 .section-2-container {
   background-color: #dce1e4;
-  background-image: url(assets/background-images/snow-background-3.jpeg);
-  // background-image: url("https://static-files.bgwgroup.com.au/theme-she/img/assets/background-images/snow-background-3.jpeg");
-  background-position: center top;
+  background-image: url(https://static-files.bgwgroup.com.au/theme-she/img/assets/background-images/snow-background-3.jpeg);
+  background-position: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 
   @media (min-width: 768px) {
-    background-attachment: fixed;
+    background-position: center top;
   }
 
   .section-2-wrapper {
